--- a/DockerFile
+++ b/DockerFile
@@ -1,21 +1,26 @@
-# Use the official .NET SDK for build
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+# Use the official .NET SDK image as the build environment
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+
+# Set the working directory to /app inside the container
 WORKDIR /app
 
-# Copy csproj and restore
-COPY *.csproj ./
+# Copy the project files into the container
+COPY . .
+
+# Restore the NuGet dependencies
 RUN dotnet restore
 
-# Copy everything else and build
-COPY . ./
-RUN dotnet publish -c Release -o out
+# Build the app
+RUN dotnet publish -c Release -o /app/publish
 
-# Use runtime image for deployment
-FROM mcr.microsoft.com/dotnet/aspnet:7.0
+# Use the official .NET runtime image to run the application
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-COPY --from=build /app/out .
-
-# Expose port
 EXPOSE 80
+EXPOSE 443
 
-ENTRYPOINT ["dotnet", "yourprojectname.dll"]
+# Copy the built app from the previous stage
+COPY --from=build /app/publish .
+
+# Set the entry point for the container
+ENTRYPOINT ["dotnet", "userprofileapp.dll"]
