--- a/DockerFile
+++ b/DockerFile
@@ -1,26 +1,14 @@
-# Use the official .NET SDK image as the build environment
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-
-# Set the working directory to /app inside the container
+# Stage 1: Build
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /app
 
-# Copy the project files into the container
 COPY . .
+RUN dotnet publish -c Release -o out
 
-# Restore the NuGet dependencies
-RUN dotnet restore
-
-# Build the app
-RUN dotnet publish -c Release -o /app/publish
-
-# Use the official .NET runtime image to run the application
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+# Stage 2: Run
+FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
+COPY --from=build /app/out .
+
 EXPOSE 80
-EXPOSE 443
-
-# Copy the built app from the previous stage
-COPY --from=build /app/publish .
-
-# Set the entry point for the container
-ENTRYPOINT ["dotnet", "userprofileapp.dll"]
+ENTRYPOINT ["dotnet", "UserProfileApp.dll"]
