--- a/DockerFile
+++ b/DockerFile
@@ -1,23 +1,14 @@
-# Use the official image from Microsoft for the runtime
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+# Stage 1: Build
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /app
-EXPOSE 80
 
-# Use SDK image to build the app
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
-COPY ["userprofileapp/userprofileapp.csproj", "userprofileapp/"]
-RUN dotnet restore "userprofileapp/userprofileapp.csproj"
 COPY . .
-WORKDIR "/src/userprofileapp"
-RUN dotnet build "userprofileapp.csproj" -c Release -o /app/build
+RUN dotnet publish -c Release -o out
 
-# Publish the app
-FROM build AS publish
-RUN dotnet publish "userprofileapp.csproj" -c Release -o /app/publish
-
-# Copy build output to the final image
-FROM base AS final
+# Stage 2: Run
+FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/out .
+
+EXPOSE 80
 ENTRYPOINT ["dotnet", "userprofileapp.dll"]
